--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/wattup"
+        android:icon="@mipmap/wattup_round"
         android:label="@string/app_name"
         android:theme="@style/Theme.Wattup">
 
